# NeuralNetworkFromScratch

./: pyproject.toml
notebooks/: nn.ipynb
